<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/searchbar_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.search.SearchBar>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/searchbar_hint"
        app:layout_anchor="@id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </com.google.android.material.search.SearchView>

    <ImageButton
        android:id="@+id/btn_favList"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/favorite_filled_primary"
        android:contentDescription="@string/favorite_list"
        app:layout_constraintBottom_toBottomOf="@+id/searchBar"
        app:layout_constraintStart_toEndOf="@+id/searchBar"
        app:layout_constraintTop_toTopOf="@+id/searchBar" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/baseline_settings_24"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="@+id/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="100dp"
        android:background="?attr/colorSecondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_attention"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="visible"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/img_attention"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/person_search"
                android:contentDescription="@string/must_search_person" />
            <TextView
                android:id="@+id/tv_attention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/TextContent.BodyMedium"
                android:text="@string/attention_text" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_showResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextContent.BodyMedium"
            tools:text="Showing 0 results"
            android:visibility="gone"
            tools:visibility="visible"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_usersList"
            android:background="?attr/colorSecondaryVariant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            tools:visibility="visible"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>